update body request swagger for endpoint 'register user'
